# Python-WebScraping-GeminiCLI

./: .gitignore  GEMINI.md  README.md  analyze_yes24_data.py  pyproject.toml
ssg_com/: ssg_items.db
ssg_com/data/: ssg_special_price.csv
starbucks_stores/: agent_prd_eda.md  agent_prd_scraping.md  agent_prd_streamlit_folium.md  eda_analyzer.py  starbucks_scraper.py
yes24/: agent_eda.md  agent_eda_yes24.md  agent_scraping.md  analysis_report.md  eda_analyzer.py  yes24_analyze_eda.py  yes24_scraper.py
yes24/data/: yes24_ai.csv  yes24_ai_1.csv
